force-app/main/default/objects/Progress_Bar_Step__mdt/Progress_Bar_Step__mdt.object-meta.xml
<CustomObject>
    <label>Progress Bar Step</label>
    <pluralLabel>Progress Bar Steps</pluralLabel>
</CustomObject>