force-app/main/default/objects/Progress_Bar_Step__mdt/fields/Progress_Bar__c.field-meta.xml
<CustomField>
    <fullName>Progress_Bar__c</fullName>
    <label>Progress Bar</label>
    <referenceTo>Progress_Bar__mdt</referenceTo>
    <relationshipLabel>Progress Bar Steps</relationshipLabel>
    <relationshipName>Progress_Bar_Steps</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>