force-app/main/default/objects/Progress_Bar_Step__mdt/listViews/Progress_Bar_Steps.listView-meta.xml
<ListView>
    <fullName>Progress_Bar_Steps</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Order_Number__c</columns>
    <columns>Page_URL__c</columns>
    <columns>Progress_Bar__c</columns>
    <filterScope>Everything</filterScope>
    <label>Progress Bar Steps</label>
</ListView>